REST: Add CreateLexeme boilerplate
This adds boilerplate code for the POST /lexemes REST route and
CreateLexeme use case. Persistence is not implemented here yet.

Bug: T434082
