# WikibaseLexeme.mediawiki-services.php
@@ -24,6 +24,7 @@ use Wikibase\Lexeme\Domain\Merge\LexemeMerger;
 use Wikibase\Lexeme\Domain\Merge\LexemeSensesMerger;
 use Wikibase\Lexeme\Domain\Merge\NoCrossReferencingLexemeStatements;
 use Wikibase\Lexeme\Domain\Storage\SenseLabelDescriptionLookup;
+use Wikibase\Lexeme\Interactors\CreateLexeme\CreateLexeme;
 use Wikibase\Lexeme\Interactors\GetLexeme\GetLexeme;
 use Wikibase\Lexeme\Interactors\GetLexeme\GetLexemeValidator;
 use Wikibase\Lexeme\Interactors\MergeLexemes\MergeLexemesInteractor;
@@ -241,6 +242,9 @@ return call_user_func( static function () {
 				),
 				new GetLexemeValidator(),
 			);
+		},
+		'WikibaseLexeme.CreateLexeme' => static function ( MediaWikiServices $services ): CreateLexeme {
+			return new CreateLexeme();
 		},
 		'WikibaseLexeme.LexemeSerializer' => static function (
 			MediaWikiServices $services
