# src/MediaWiki/RestApi/specs/openapi.fragment.dereferenced.json
@@ -11,6 +11,129 @@
     }
   ],
   "paths": {
+    "/v0/entities/lexemes": {
+      "post": {
+        "operationId": "addLexeme",
+        "tags": [
+          "lexemes"
+        ],
+        "summary": "Create a Lexeme",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "lexeme": {
+                    "type": "object"
+                  }
+                },
+                "required": [
+                  "lexeme"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "The newly created Lexeme",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "The request cannot be processed",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "type": "string"
+                    },
+                    "message": {
+                      "type": "string"
+                    },
+                    "context": {
+                      "type": "object"
+                    }
+                  },
+                  "required": [
+                    "code",
+                    "message"
+                  ],
+                  "additionalProperties": false
+                },
+                "examples": {
+                  "invalid-query-parameter": {
+                    "value": {
+                      "code": "invalid-query-parameter",
+                      "message": "Invalid query parameter: '{query_parameter}'",
+                      "context": {
+                        "parameter": "{query_parameter}"
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "headers": {
+              "Content-Language": {
+                "description": "Language code of the language in which error message is provided",
+                "schema": {
+                  "type": "string"
+                },
+                "required": true
+              }
+            }
+          },
+          "500": {
+            "description": "An unexpected error has occurred",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "type": "string"
+                    },
+                    "message": {
+                      "type": "string"
+                    },
+                    "context": {
+                      "type": "object"
+                    }
+                  },
+                  "required": [
+                    "code",
+                    "message"
+                  ]
+                },
+                "example": {
+                  "code": "unexpected-error",
+                  "message": "Unexpected Error"
+                }
+              }
+            },
+            "headers": {
+              "Content-Language": {
+                "description": "Language code of the language in which error message is provided",
+                "schema": {
+                  "type": "string"
+                },
+                "required": true
+              }
+            }
+          }
+        }
+      }
+    },
     "/v0/entities/lexemes/{lexeme_id}": {
       "get": {
         "operationId": "getLexeme",
